--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Developer</h3>
-            <p class="fst-italic">
+            <p class="fst">
               Hello! 👋 I'm Punitkumar Tewani, a passionate developer with 2
               years of experience currenlty placed at Intive as a Software
               Engineer. My expertise lies in JavaScript, TypeScript,NodeJS ,
@@ -655,7 +655,7 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>My Address</h3>
-              <p>2,Sevakunj Society,Nr.Methodist Church,Sionnagar,Khokhara,Ahmedabad-380008</p>
+              <p>Ahmedabad,India</p>
             </div>
           </div>
 
